# zammad-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  compose.yaml  ruff.toml
.github/: copilot-instructions.md
.github/workflows/: dependency_review.yaml  deploy-docs.yaml  docker-release.yaml  pytest.yaml  ruff.yaml  scorecard.yaml  ty.yaml
docs/: api.md  configuration.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/adr/: 01-system-architecture.md  02-two-way-processing-of-tickets.md  03-vector-database.md  04-knowledge-management-system.md  05-kb-index-job.md  index.md
docs/components/: frontend.md  index.md  kafka.md  observability.md  prometheus.md  qdrant.md  triage.md  zammad.md
docs/sketch/: 2way_processing.excalidraw  system_architecture.excalidraw
observability/grafana/provisioning/dashboards/: dashboards.yaml
observability/prometheus/: prometheus.yml
zammad-ai/: .dockerignore  .gitignore  Dockerfile  README.md  benchmark_triage.py  config.example.yaml  local.config.yaml  logconf.yaml  main.py  pyproject.toml  update_qdrant.py
zammad-ai-index/: README.md  config.example.yaml  logconf.yaml  main.py  pyproject.toml
zammad-ai-index/job/data/: __init__.py  processing.py  retrieval.py
zammad-ai-index/job/models/: qdrant.py  zammad.py
zammad-ai-index/job/qdrant/: qdrant.py
zammad-ai-index/job/services/: data_processing.py  indexing.py
zammad-ai-index/job/settings/: genai.py  index.py  logging.py  qdrant.py  settings.py  zammad.py
zammad-ai-index/job/utils/: hash.py  logging.py
zammad-ai-index/job/zammad/: api.py  base.py  eai.py
zammad-ai-index/src/models/: qdrant.py  zammad.py
zammad-ai-index/src/qdrant/: qdrant.py
zammad-ai-index/src/services/: __init__.py  data_processing.py  data_retrieval.py  indexing.py
zammad-ai-index/src/settings/: index.py  settings.py  zammad.py
zammad-ai-index/src/utils/: logging.py
zammad-ai-index/src/zammad/: api.py  base.py  eai.py
zammad-ai/app/: __init__.py  kafka.py
zammad-ai/app/action/: service.py
zammad-ai/app/answer/: __init__.py  agent.py  answer.py  context.py  dlf.py  formulate_answer.py  knowledgebase.py  service.py  tools.py  types.py
zammad-ai/app/api/: __init__.py  backend.py
zammad-ai/app/api/v1/: __init__.py  answer.py  triage.py
zammad-ai/app/broker/: kafka.py
zammad-ai/app/core/: answer_settings.py  backend.py  context.py  core_settings.py  settings.py  triage_settings.py
zammad-ai/app/core/settings/: __init__.py  frontend.py  genai.py  kafka.py  qdrant.py  settings.py  triage.py  usecase.py  zammad.py
zammad-ai/app/frontend/: __init__.py  integration.py  ui.py
zammad-ai/app/kafka/: __init__.py  broker.py  security.py
zammad-ai/app/models/: __init__.py  answer.py  api.py  api_v1.py  kafka.py  qdrant.py  triage.py  zammad.py
zammad-ai/app/observe/: __init__.py  langfuse.py  observer.py
zammad-ai/app/qdrant/: __init__.py  qdrant.py
zammad-ai/app/settings/: __init__.py  answer.py  frontend.py  genai.py  kafka.py  langfuse.py  logging.py  prometheus.py  qdrant.py  settings.py  triage.py  usecase.py  zammad.py
zammad-ai/app/triage/: __init__.py  genai_handler.py  helper.py  observer.py  prompts.py  rss_feed.py  settings.py  ticket_helper.py  triage.py
zammad-ai/app/utils/: __init__.py  logging.py  paths.py  prompts.py  status.py  validators.py
zammad-ai/app/zammad/: __init__.py  api.py  base.py  eai.py
zammad-ai/demo/: demo.py
zammad-ai/prompts/answer/: agent.prompt.md  user_message_template.prompt.md
zammad-ai/prompts/triage/: days_since_request.prompt.md  processing_id.prompt.md  role.prompt.md  triage.prompt.md
zammad-ai/src/: kafka.py  logtools.py  settings.py
zammad-ai/test/: __init__.py  conftest.py  fakes.py  test_answer_service.py  test_kafka.py  test_settings.py  test_triage.py
