[project]
name = "zammad-ai-index"
version = "0.1.0"
description = "Indexing job for Zammad AI"
readme = "README.md"
requires-python = "==3.14.3"
dependencies = [
    "feedparser==6.0.12",
    "langchain==1.2.10",
    "langchain-core==1.2.22",
    "langchain-openai==1.1.11",
    "langchain-qdrant==1.1.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "stamina==25.2.0",
    "truststore==0.10.4",
]

[dependency-groups]
dev = ["pre-commit==4.5.1", "ruff==0.15.4", "ty==0.0.20"]
